接入腾讯验证码

--- a/ForeEnd/small_profit_mall/public/index.html
+++ b/ForeEnd/small_profit_mall/public/index.html
@@ -14,8 +14,8 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
-  <script src="https://v.vaptcha.com/v3.js"></script>
-   <script>
+  <script src="https://ssl.captcha.qq.com/TCaptcha.js"></script>
+  <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('/service-worker.js').then(() => {
         console.log('Service worker registered!');
