--- a/ForeEnd/small_profit_mall/public/index.html
+++ b/ForeEnd/small_profit_mall/public/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=1920,initial-scale=0.2">
     <link rel="icon" href="<%=BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <!-- 腾讯分析-->
+    <script type="text/javascript" src="http://tajs.qq.com/stats?sId=66558392" charset="UTF-8"></script>
   </head>
   <body>
     <noscript>
